--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     margin:0;
     font-family: "Noto Sans JP",sans-serif;
     font-weight: 500;
-    font-size: normal;
+    font-style: normal;
 }
 p,h1,h2,h3,h4,a {
     margin: 0;
@@ -18,7 +18,7 @@ a {
 }
 #container {
     font-size: 14px;
-    max-width: 1080px;
+    width: 1080px;
     overflow: hidden;
 }
 .header {
@@ -26,9 +26,7 @@ a {
     height: 50px;
     display: flex;
     align-items: center;
- 
-  
- 
+    width: 100%;
 }
 .title {
     display: flex;
@@ -91,7 +89,9 @@ a {
 .header-title:hover {
   color: #c08c5c; /* ホバー時に色が変わる */
 }
+
 .main {
+    width: 100%;
     position: relative;
     text-align: center;
 }
@@ -146,54 +146,209 @@ a {
     margin: -380px 76.24px 33.88px 920px;
 }
 #tsuyomi {
-    padding: 64px 100px 99px 68px;
-    background-color: rgba(13,150,160,0.102)
+    padding: 64px 100px 68px;
+    background-color: rgba(13,150,160,0.102);
+    max-width: 880px;
 }
 .tsuyomi-with-images {
     display: flex;
     gap: 20px;
     margin-bottom: 48px;
-}
-.tsuyomi h2 {
-    font-weight: 700; 
-    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 .tsuyomi-icon {
     width: 25.49px;
 }    
+.tsuyomi-with-images h3 {
+    margin: 0;
+    font-size: 25px;
+}
 .tsuyomi-item {
     display: flex;
-  
-  align-items: center;
-  margin-bottom: 40px;
-
+    max-width: 880px;
 }
-
-.tsuyomi-text {
-
-   
-    padding-left: 19px;
-    
-}
-.tsuyomi-text h3 {
-    font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 19px;
-}
-.tsuyomi-text p {
-  font-size: 18px;
-  line-height: 1.6;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.tsuyomi-img {
-  flex: 1 1 45%;
+.tsuyomi-text-area {
+    display: block;
   width: 50%;
-  text-align: center;
+  margin-right: 45px;
+  margin-top: 48px;  
 }
-.tsuyomi-img img {
-    width: 50%;
-    max-width: 50%;
-    height: auto;
+.tsuyomi-text-area h4 {
+    font-weight: 700; 
+    font-size: 22px;
+    margin-bottom: 19px;
 }
+.tsuyomi-text-area p {
+  font-size: 18px;
+  text-align: left;
+  font-weight: 500;
+}
+.tsuyomi-text-area2 {
+    display: block;
+  width: 50%;
+  margin-left: 47px;
+  margin-top: 48px;  
+}
+.tsuyomi-text-area2 h4 {
+    font-weight: 700; 
+    font-size: 22px;
+    margin-bottom: 19px;
+}
+.tsuyomi-text-area2 p {
+  font-size: 18px;
+  text-align: left;
+  font-weight: 500;
+}
+
+.tsuyomi-img-area {
+    max-width: 440px;
+    margin-bottom: 50px;
+}
+.tsuyomi-img-area img {
+    width: 100%;
+}
+#service {
+    padding: 63px 100px 59px;
+    max-width: 880px;
+}
+.service-with-images {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 48px;
+    align-items: center;
+    justify-content: center;
+}
+.service-icon {
+    width: 25.49px;
+}
+.service-with-images h3 {
+    margin: 0;
+    font-size: 25px;
+}
+.service-list {
+    display: flex;
+    text-align: center;
+}
+.service-content {
+    width: 100%;
+}
+.service-content:not(:last-of-type) {
+    margin-right: 50px;
+}
+.service-content p {
+    width: 100%;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 0;
+}
+.service-content ul {
+    font-size: 17px;
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+    line-height: 25px;
+    margin-top: 8px;
+    font-weight: 500;
+}
+.service-content img {
+    width: 100%;
+    margin-bottom: 19px;
+}
+#news {
+    padding: 63px 100px 68px;
+    max-width: 880px;
+    background-color: rgba(13,150,160,0.102);
+}
+.news-with-images {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 48px;
+    align-items: center;
+    justify-content: center;
+}
+.news-with-images h3 {
+    margin: 0;
+    font-size: 25px;
+    font-weight: 700;
+}
+.news-icon {
+    width: 25.49px;
+}
+.news-list {
+    list-style: none;
+    padding: 0;
+    margin: 0; 
+    border-top: 1px solid #707070; 
+    text-align: center;
+}
+.news-item {
+    padding: 15px 0;
+    border-bottom: 1px solid #707070;
+    display: grid;
+    grid-template-columns: 92px 200px 500px;
+}
+.news-date {
+    color: #505050;
+    font-weight: 700;
+    margin-left: 18.5px;
+    font-size: 17px;
+}
+.news-title {
+    color: #0D96A0;
+    font-weight: 700;
+    text-decoration: none;
+    margin-left: 40px;
+    font-size: 20px;
+}
+.news-text {
+    color: #505050;
+    font-weight: 500;
+    margin-left: 55px;
+    text-align: left;
+    font-size: 17px;  
+}
+#access {
+    padding: 63px 100px 70px;
+    max-width: 880px;
+}
+.access-with-images {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 48px;
+    align-items: center;
+    justify-content: center;
+}
+.access-with-images h3 {
+    margin: 0;
+    font-size: 25px;
+    font-weight: 700;
+}
+.access-icon {
+    width: 25.49px;
+}
+.access-with-images h3 {
+    margin: 0;
+    font-size: 22px;
+}
+.access-with-images p {
+    margin: 0;
+    font-size: 18px;
+}
+.access-flex {
+    display: flex;
+    max-width: 880px;
+}
+.access-img-area {
+    max-width: 440px;
+    margin-bottom: 50px;
+}
+.access-img-area img {
+    width: 100%;
+}
+
+
+
+
+
 
