--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     font-weight: 500;
     font-style: normal;
 }
-p,h1,h2,h3,h4,a {
+p,h1,h2,h3,h4,h5,a {
     margin: 0;
     color: #505050;
 }
@@ -18,7 +18,7 @@ a {
 }
 #container {
     font-size: 14px;
-    width: 1080px;
+    max-width: 1080px;
     overflow: hidden;
 }
 .header {
@@ -170,9 +170,9 @@ a {
 }
 .tsuyomi-text-area {
     display: block;
-  width: 50%;
-  margin-right: 45px;
-  margin-top: 48px;  
+    width: 50%;
+    margin-right: 45px;
+    margin-top: 48px;  
 }
 .tsuyomi-text-area h4 {
     font-weight: 700; 
@@ -180,15 +180,15 @@ a {
     margin-bottom: 19px;
 }
 .tsuyomi-text-area p {
-  font-size: 18px;
-  text-align: left;
-  font-weight: 500;
+    font-size: 18px;
+    text-align: left;
+    font-weight: 500;
 }
 .tsuyomi-text-area2 {
     display: block;
-  width: 50%;
-  margin-left: 47px;
-  margin-top: 48px;  
+    width: 50%;
+    margin-left: 47px;
+    margin-top: 48px;  
 }
 .tsuyomi-text-area2 h4 {
     font-weight: 700; 
@@ -199,8 +199,25 @@ a {
   font-size: 18px;
   text-align: left;
   font-weight: 500;
+  width: 400px;
 }
-
+.tsuyomi-text-area3 {
+    display: block;
+    width: 50%;
+    margin-right: 47px;
+    margin-top: 48px;  
+}
+.tsuyomi-text-area3 h4 {
+    font-weight: 700; 
+    font-size: 22px;
+    margin-bottom: 19px;
+}
+.tsuyomi-text-area3 p {
+  font-size: 18px;
+  text-align: left;
+  font-weight: 500;
+  width: 400px;
+}
 .tsuyomi-img-area {
     max-width: 440px;
     margin-bottom: 50px;
@@ -327,10 +344,6 @@ a {
 .access-icon {
     width: 25.49px;
 }
-.access-with-images h3 {
-    margin: 0;
-    font-size: 22px;
-}
 .access-with-images p {
     margin: 0;
     font-size: 18px;
@@ -346,9 +359,203 @@ a {
 .access-img-area img {
     width: 100%;
 }
+.access-text-area {
+    display: block;
+    width: 50%;
+    margin-left: 46px;
+    margin-top: 0;  
+}
+.access-text-area h5 {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.address {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 14px;
+}
+.tel {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 12px;
+}
+.number {
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 8px;
+    color: #0D96A0;
+}
+.mail {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 27px;
+}
+.hr {
+    border: 1px;
+    color: #707070;
+}
+.time, .holiday {
+    font-size: 18px;
+    font-weight: 500;
+    margin-top: 15px;
+    margin-bottom: 21px ;
+}
+#contact {
+    padding: 62px 100px 80px;
+    background-color: rgba(13,150,160,0.102);
+    max-width: 880px;
+}
+.contact-with-images {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 25px;
+    align-items: center;
+    justify-content: center;
+}
+.contact-with-images h3 {
+    margin: 0;
+    font-size: 25px;
+    font-weight: 700;
+}
+.contact-icon {
+    width: 25.49px;
+}
+.desc {
+    text-align: center;
+    margin-top: 15px;
+}
+.section-desc {
+    font-size: 17px;
+    font-weight: 500;
+    margin-bottom: 39px;
+    color: #505050;
+    line-height: 30px;
+}
+.contact {
+    padding-block: 62px 80px;
+}
+.form {
+    margin-inline: auto;
+    margin-top: 39px;
+    margin-right: 60px;
+    width: 100%;
+}
+.form__item {
+    display: flex;
+    margin-right: 30px;
+}
+.form__item:not(:first-of-type) {
+    margin-top: 39px;
+}
+.form__label {
+    font-size: 20px;
+    font-weight: 700;
+    width: 140px;
+    color: #505050;
+}
+.form__input {
+  flex: 1;
+}
+.form__textarea {
+  flex: 1;
+  line-height: 0;
+}
+input[type="text"],
+input[type="email"] {
+  border: 1px solid #FFFFFF;
+  height: 40px;
+  width: 100%;
+  padding-inline: 15px;
+  font-size: 16px;
+}
+textarea {
+  border: 1px solid #FFFFFF;
+  height: 300px;
+  width: 100%;
+  resize: none;
+  padding: 15px;
+  font-size: 16px;
+  line-height: 1.6;
+}
+.contact__button {
+  margin-top: 50px;
+  margin-left: 340px;
+  margin-right: 340px;
+  width: 200px;
 
+}
 
+input[type="submit"] {
+  width: 100%;
+  height: 50px;
+  background-color: #0D96A0;
+  color: #fff;
+  border: 1px solid #0D96A0;
+  font-size: 25px;
+  cursor: pointer;
+  transition: .4s;
+  padding-top: 9px 0;
+  border-radius: 0.7rem;
+}
 
-
-
-
+input[type="submit"]:hover {
+  color: #000;
+  background-color: #fff;
+}
+.footer {
+    background-color: #505050;
+    padding-block: 66px 71px;
+    text-align: center;
+    max-width: 1080px;
+}
+.inner {
+  display: flex;
+  flex-direction: column;  
+}
+.footer_content {
+    margin-inline: auto;
+}
+.footer-nav_lists {
+    display: flex;
+    column-gap: 14px;
+    border-bottom: 1px solid #ffffff;
+    padding: 21px 66px;
+    margin: 0 auto;
+    list-style: none;
+}
+.footer-nav_list {
+    list-style: none;
+ 
+}
+.footer-nav_link {
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: 700;
+}
+.footer_copyright {
+    color: #fff;
+    font-size: 20px;
+    margin-top: 27px;
+    font-size: 700;
+}
+.footer_sns {
+    display: flex;
+    margin-top: 12px;
+    list-style: none;
+    justify-content: center; 
+    padding: 0;
+    gap: 12px;
+}
+.footer_sns li {
+    list-style: none;
+}
+.footer_sns a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+}
+.footer_sns img {
+     width: 22px;
+     height: 18px;
+}
