--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,6 @@ a {
 .header-title:hover {
   color: #c08c5c; /* ホバー時に色が変わる */
 }
-
 .main {
     width: 100%;
     position: relative;
@@ -99,7 +98,7 @@ a {
      max-width: 1080px;
      height: auto;
 }
-.copy {
+.main_copy {
     position: absolute;
     top: 30%;
     left: 0px;
@@ -109,13 +108,13 @@ a {
     text-align: left;
     
 }
-.copy p {
+.main_copy p {
     font-size: 25px;
     margin: 0 0 8px;
     font-weight: 700;
     padding-left: 79px;
 }
-.copy h1 {
+.main_copy h1 {
     font-size: 40px;
     color: #0D96A0;
     margin: 0;
@@ -125,34 +124,39 @@ a {
 }
 .messege {
     max-width: 1080px;
+    position: relative;
   
 }
-.messege h2 {
+.br-sp {
+    display: none;
+}
+.message h2 {
     text-align: center;
-    padding: 60px 60px 15px;
+    padding: 53px 60px 15px;
     font-size: 30px;
     font-weight: 700;
     color: #0D96A0;
 }
-.messege p {
+.message p {
     text-align: center;
-    padding-bottom: 60px;
+    padding-bottom: 30px;
     font-size: 18px;
     color: #505050; 
+    line-height: 33px;
 }
-.messege img {
+.message img {
     width: 83.75px;
     height: 77.12px; 
-    margin: -380px 76.24px 33.88px 920px;
+    margin: -80px 76.24px 33.88px 920px;
 }
 #tsuyomi {
-    padding: 64px 100px 68px;
+    padding: 60px 100px 10px;
     background-color: rgba(13,150,160,0.102);
     max-width: 880px;
 }
 .tsuyomi-with-images {
     display: flex;
-    gap: 20px;
+    gap: 45px;
     margin-bottom: 48px;
     align-items: center;
     justify-content: center;
@@ -163,10 +167,16 @@ a {
 .tsuyomi-with-images h3 {
     margin: 0;
     font-size: 25px;
+    font-weight: 700;
 }
 .tsuyomi-item {
     display: flex;
     max-width: 880px;
+    text-align: center;
+    justify-content: flex-start;
+}
+.tsuyomi-item.reverse {
+  flex-direction: row-reverse;
 }
 .tsuyomi-text-area {
     display: block;
@@ -183,29 +193,33 @@ a {
     font-size: 18px;
     text-align: left;
     font-weight: 500;
+    line-height: 33px;
 }
 .tsuyomi-text-area2 {
     display: block;
     width: 50%;
     margin-left: 47px;
-    margin-top: 48px;  
+    margin-top: 45px; 
+    text-align: left; 
 }
 .tsuyomi-text-area2 h4 {
     font-weight: 700; 
     font-size: 22px;
-    margin-bottom: 19px;
+    margin-bottom: 21px;
 }
 .tsuyomi-text-area2 p {
   font-size: 18px;
   text-align: left;
   font-weight: 500;
-  width: 400px;
+  width: 105%;
+  line-height: 33px;
 }
 .tsuyomi-text-area3 {
     display: block;
     width: 50%;
     margin-right: 47px;
-    margin-top: 48px;  
+    margin-top: 40px; 
+    text-align: left; 
 }
 .tsuyomi-text-area3 h4 {
     font-weight: 700; 
@@ -216,7 +230,8 @@ a {
   font-size: 18px;
   text-align: left;
   font-weight: 500;
-  width: 400px;
+  width: 396px;
+  line-height: 33px;
 }
 .tsuyomi-img-area {
     max-width: 440px;
@@ -226,13 +241,13 @@ a {
     width: 100%;
 }
 #service {
-    padding: 63px 100px 59px;
+    padding: 60px 100px 59px;
     max-width: 880px;
 }
 .service-with-images {
     display: flex;
     gap: 16px;
-    margin-bottom: 48px;
+    margin-bottom: 50px;
     align-items: center;
     justify-content: center;
 }
@@ -259,27 +274,28 @@ a {
     font-weight: 700;
     margin: 0;
 }
-.service-content ul {
+.item-list {
     font-size: 17px;
     list-style-type: none;
     padding-left: 0;
     margin: 0;
-    line-height: 25px;
-    margin-top: 8px;
+    line-height: 30px;
+    margin-top: 5px;
     font-weight: 500;
+    text-align: left;
 }
 .service-content img {
     width: 100%;
-    margin-bottom: 19px;
+    margin-bottom: 10px;
 }
 #news {
-    padding: 63px 100px 68px;
+    padding: 63px 100px 67px;
     max-width: 880px;
     background-color: rgba(13,150,160,0.102);
 }
 .news-with-images {
     display: flex;
-    gap: 16px;
+    gap: 20px;
     margin-bottom: 48px;
     align-items: center;
     justify-content: center;
@@ -303,13 +319,15 @@ a {
     padding: 15px 0;
     border-bottom: 1px solid #707070;
     display: grid;
-    grid-template-columns: 92px 200px 500px;
+    grid-template-columns: 97px 200px 500px;
 }
 .news-date {
     color: #505050;
     font-weight: 700;
-    margin-left: 18.5px;
-    font-size: 17px;
+    margin-left: 19px;
+    font-size: 18px;
+    transform: scale(1, 0.9); 
+    
 }
 .news-title {
     color: #0D96A0;
@@ -317,16 +335,17 @@ a {
     text-decoration: none;
     margin-left: 40px;
     font-size: 20px;
+    
 }
 .news-text {
     color: #505050;
     font-weight: 500;
-    margin-left: 55px;
+    margin-left: 49px;
     text-align: left;
     font-size: 17px;  
 }
 #access {
-    padding: 63px 100px 70px;
+    padding: 63px 100px 15px;
     max-width: 880px;
 }
 .access-with-images {
@@ -353,15 +372,22 @@ a {
     max-width: 880px;
 }
 .access-img-area {
-    max-width: 440px;
+    width: 50%;
+    position: relative;
     margin-bottom: 50px;
+    overflow: hidden;
 }
-.access-img-area img {
+.access-img-area iframe {
+    position: absolute
+    top 0;
+    left: 0;
     width: 100%;
+    height: 300px;
+
 }
 .access-text-area {
     display: block;
-    width: 50%;
+    width: 40%;
     margin-left: 46px;
     margin-top: 0;  
 }
@@ -370,21 +396,27 @@ a {
     font-weight: 700;
     margin-bottom: 15px;
 }
-.address {
+.post {
+    margin-right: 13px;
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 14px;
+    
+}
+.address  {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 30px;
 }
 .tel {
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
 .number {
     font-size: 25px;
     font-weight: 700;
-    margin-bottom: 8px;
-    color: #0D96A0;
+    color: #0D96A0;  
 }
 .mail {
     font-size: 18px;
@@ -398,13 +430,13 @@ a {
 .time, .holiday {
     font-size: 18px;
     font-weight: 500;
-    margin-top: 15px;
-    margin-bottom: 21px ;
+    margin-top: 17px;
+    margin-bottom: 17px ;
 }
 #contact {
     padding: 62px 100px 80px;
     background-color: rgba(13,150,160,0.102);
-    max-width: 880px;
+    max-width: 1080px;
 }
 .contact-with-images {
     display: flex;
@@ -423,9 +455,6 @@ a {
 }
 .desc {
     text-align: center;
-    margin-top: 15px;
-}
-.section-desc {
     font-size: 17px;
     font-weight: 500;
     margin-bottom: 39px;
@@ -437,7 +466,7 @@ a {
 }
 .form {
     margin-inline: auto;
-    margin-top: 39px;
+    margin-top: 40px;
     margin-right: 60px;
     width: 100%;
 }
@@ -446,7 +475,7 @@ a {
     margin-right: 30px;
 }
 .form__item:not(:first-of-type) {
-    margin-top: 39px;
+    margin-top: 35px;
 }
 .form__label {
     font-size: 20px;
@@ -464,14 +493,14 @@ a {
 input[type="text"],
 input[type="email"] {
   border: 1px solid #FFFFFF;
-  height: 40px;
+  height: 35px;
   width: 100%;
   padding-inline: 15px;
   font-size: 16px;
 }
 textarea {
   border: 1px solid #FFFFFF;
-  height: 300px;
+  height: 260px;
   width: 100%;
   resize: none;
   padding: 15px;
@@ -479,7 +508,7 @@ textarea {
   line-height: 1.6;
 }
 .contact__button {
-  margin-top: 50px;
+  margin-top: 52px;
   margin-left: 340px;
   margin-right: 340px;
   width: 200px;
@@ -505,7 +534,7 @@ input[type="submit"]:hover {
 }
 .footer {
     background-color: #505050;
-    padding-block: 66px 71px;
+    padding-block: 46px 71px;
     text-align: center;
     max-width: 1080px;
 }
@@ -537,7 +566,8 @@ input[type="submit"]:hover {
     color: #fff;
     font-size: 20px;
     margin-top: 27px;
-    font-size: 700;
+    font-weight: 700; 
+    
 }
 .footer_sns {
     display: flex;
@@ -559,3 +589,226 @@ input[type="submit"]:hover {
      width: 22px;
      height: 18px;
 }
+@media screen and (min-width:767px) {
+  .pc_none{
+    display: none!important;
+  }
+}
+@media screen and (max-width:768px) {
+  .sp_none{
+    display: none!important;
+  }
+  #container {
+    font-size: 16px;
+  }
+  .header-icon {
+    margin-left: 20px;
+  }
+  .header-title {
+    font-size: 20px;
+    margin: 8 9; 
+  }
+  .nav_content {
+    display: none;
+  }
+  #main {
+    width: 100%;
+    position: relative;
+    text-align: center;
+  }
+  .main img {
+    width: 100%;
+    height: auto;
+  }
+  .main_copy {
+        position: absolute;
+        top: 408px;
+        left: 0;
+        padding: 15px;
+        width: 70%;   
+
+    }
+    .main_copy p {
+        font-size: 18px;
+        padding-left: 10px;
+        
+    }
+    .main_copy h1 {
+        font-size: 27px;
+        padding-left: 10px;
+        color: #0D96A0;
+    }
+    .br-sp {
+        display: inline;
+    }
+    .br-sp::after {
+        content: "\A"; 
+        white-space: pre;
+    }
+    .massage {
+        position: relative;
+    }
+    .message h2 {
+        font-size: 25px;
+        margin-right: 0;
+        text-align: center;
+    }
+    .message p {
+        margin-right: 20px;
+        margin-left: 20px;
+        font-size: 16px;
+        text-align: left;
+    }
+    .message img {
+        position: absolute;
+        bottom: -330px;
+        right: -40px;
+        width: 68px;
+        height: auto;
+    }
+    #tsuyomi {
+        padding: 40px 20px 10px;  
+    }
+    .tsuyomi-item {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    .tsuyomi-img-area {
+        order: 1;
+        width: 100%;
+        margin-bottom: 5px;
+    }
+    .tsuyomi-text-area,
+    .tsuyomi-text-area2,
+    .tsuyomi-text-area3 {
+        order: 2;
+        width: 100%;
+        margin: 20px 0;
+        margin-bottom: 8px;
+    }
+    .tsuyomi-text-area h4 {
+        font-size: 20px;
+    }
+    .tsuyomi-text-area p {
+        font-size: 16px;
+        white-space: wrap;
+    }
+    .tsuyomi-text-area2 h4 {
+        font-size: 20px;
+    }
+    .tsuyomi-text-area2 p {
+        font-size: 16px;
+        white-space: wrap;
+        width: 100%;
+    }
+    .tsuyomi-text-area3 h4 {
+        font-size: 20px;
+    }
+    .tsuyomi-text-area3 p {
+        font-size: 16px;
+        white-space: wrap;
+        width: 100%;
+    }
+    #service {
+        padding: 45px 20px 39px;
+    }
+    .service-list {
+        display: block;
+    }
+    .service-content img {
+        margin-bottom: 30px;
+    }
+    .service-content p {
+        margin-bottom: 7px;
+        font-size: 20px;
+    }
+    .item-list {
+        margin-bottom: 39px;
+        font-size: 16px;
+    }
+    .item-list li {
+        display: inline;
+    }
+    #news {
+        padding: 43px 20px 50px;
+    }   
+    .news-item {
+        display: block;
+        text-align: left;
+        font-size: 16px;
+    }
+    .news-date {
+        margin: 10px;
+    }
+    .news-title {
+        margin-left: 10px;
+    }
+    .news-text {
+        margin-left: 10px;
+    }
+    #access {
+        padding: 43px 20px 50px;
+    }
+    .access-flex {
+        display: block;
+    }
+    .access-text-area {
+        margin-left: 0;
+        white-space: nowrap;
+    }
+    .post,.address,.tel,.mail,.time,.holiday {
+        font-size: 16px;
+    }
+    .access-img-area {
+        width: 100%;
+        margin-right: 20px;
+        margin-bottom: 30px;
+    }
+    }
+    .number {
+        font-size: 25px;
+    }
+    #contact {
+        padding: 43px 20px 50px;
+    }
+    .contact-with-images {
+        margin-bottom: 43px;
+    }
+    .section-desc {
+        font-size: 16px;
+        text-align: left;
+        margin-bottom: 34px;
+    }
+    .form__item {
+        display: block;   
+    }
+    .form__label {
+        font-size: 16px;
+        margin-bottom: 2px;
+    }
+    .form__input {
+        margin-left: 0;
+    }
+    .form__textarea {
+        margin-left: 0;
+    }
+    .contact__button {
+        margin-left: 0;
+        width: 335px;
+    }
+    .footer_copyright {
+        font-size: 16px;
+    }
+    .footer {
+        padding: 45px 20px 50px;
+    }
+    .footer-nav_lists {
+        flex-wrap: wrap; /* 折り返しOKにする */
+        justify-content: center; /* 中央揃え */
+        row-gap: 10px; /* 縦の余白 */
+        padding: 16px 10px; /* スマホ時は左右パディング狭く */
+
+    }
+    }
