--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ a {
     font-size: 14px;
     max-width: 1080px;
     overflow: hidden;
+    margin: 0 auto;
 }
 .header {
     font-size: 14px;
@@ -156,7 +157,7 @@ a {
 }
 .tsuyomi-with-images {
     display: flex;
-    gap: 45px;
+    gap: 20px;
     margin-bottom: 48px;
     align-items: center;
     justify-content: center;
@@ -217,7 +218,7 @@ a {
 .tsuyomi-text-area3 {
     display: block;
     width: 50%;
-    margin-right: 47px;
+
     margin-top: 40px; 
     text-align: left; 
 }
@@ -230,7 +231,8 @@ a {
   font-size: 18px;
   text-align: left;
   font-weight: 500;
-  width: 396px;
+  max-width: 395.5px;
+  width: 100%;
   line-height: 33px;
 }
 .tsuyomi-img-area {
@@ -283,6 +285,7 @@ a {
     margin-top: 5px;
     font-weight: 500;
     text-align: left;
+    color: #505050;
 }
 .service-content img {
     width: 100%;
@@ -372,7 +375,7 @@ a {
     max-width: 880px;
 }
 .access-img-area {
-    width: 50%;
+    width: 53%;
     position: relative;
     margin-bottom: 50px;
     overflow: hidden;
@@ -387,7 +390,7 @@ a {
 }
 .access-text-area {
     display: block;
-    width: 40%;
+    width: 47%;
     margin-left: 46px;
     margin-top: 0;  
 }
@@ -437,13 +440,14 @@ a {
     padding: 62px 100px 80px;
     background-color: rgba(13,150,160,0.102);
     max-width: 1080px;
+    margin: 0 auto;
 }
 .contact-with-images {
     display: flex;
     gap: 16px;
-    margin-bottom: 25px;
     align-items: center;
     justify-content: center;
+    
 }
 .contact-with-images h3 {
     margin: 0;
@@ -454,65 +458,53 @@ a {
     width: 25.49px;
 }
 .desc {
-    text-align: center;
+    margin-top: 25px;
+    
+}
+.section-desc {
     font-size: 17px;
     font-weight: 500;
-    margin-bottom: 39px;
     color: #505050;
     line-height: 30px;
+    margin: 0 auto;
+    text-align: center;
 }
-.contact {
-    padding-block: 62px 80px;
+.contact_form {
+    margin-top: 39px;
 }
-.form {
-    margin-inline: auto;
-    margin-top: 40px;
-    margin-right: 60px;
-    width: 100%;
-}
-.form__item {
+.form_item {
     display: flex;
-    margin-right: 30px;
+    gap: 18px;
+    margin-bottom: 30px;
 }
-.form__item:not(:first-of-type) {
-    margin-top: 35px;
-}
-.form__label {
+.form_label {
     font-size: 20px;
     font-weight: 700;
-    width: 140px;
-    color: #505050;
-}
-.form__input {
-  flex: 1;
-}
-.form__textarea {
-  flex: 1;
-  line-height: 0;
+    width: 160px;
+    color: #505050;  
+    margin-top: 10px;
 }
 input[type="text"],
-input[type="email"] {
-  border: 1px solid #FFFFFF;
-  height: 35px;
-  width: 100%;
-  padding-inline: 15px;
-  font-size: 16px;
-}
+input[type="email"],
 textarea {
   border: 1px solid #FFFFFF;
-  height: 260px;
-  width: 100%;
-  resize: none;
-  padding: 15px;
+  height: 18px;
+  width: 711px;
+  padding: 10px 15px;
   font-size: 16px;
-  line-height: 1.6;
+  border-radius: 4px;
+  margin-inline: auto;
 }
-.contact__button {
-  margin-top: 52px;
-  margin-left: 340px;
-  margin-right: 340px;
+textarea {
+  height: 270px;
+  resize: none;
+}
+.contact_button {
+  margin-top: 58px;
+  margin-inline: auto;
   width: 200px;
-
+  display: flex;
+  justify-content: center;
 }
 
 input[type="submit"] {
@@ -524,7 +516,7 @@ input[type="submit"] {
   font-size: 25px;
   cursor: pointer;
   transition: .4s;
-  padding-top: 9px 0;
+  padding: 0;
   border-radius: 0.7rem;
 }
 
@@ -565,9 +557,12 @@ input[type="submit"]:hover {
 .footer_copyright {
     color: #fff;
     font-size: 20px;
-    margin-top: 27px;
+    margin-top: 30px;
     font-weight: 700; 
-    
+}
+.footer_copyright .rogo {
+    margin-right: 1em;
+
 }
 .footer_sns {
     display: flex;
@@ -732,21 +727,25 @@ input[type="submit"]:hover {
         display: inline;
     }
     #news {
-        padding: 43px 20px 50px;
+        padding: 43px 15px 50px 14px;
     }   
     .news-item {
         display: block;
         text-align: left;
         font-size: 16px;
+        padding-top: 28px;
+        padding-bottom: 28px;
     }
     .news-date {
-        margin: 10px;
+        margin-left: 8px;
     }
     .news-title {
-        margin-left: 10px;
+        margin-left: 8px;
+        margin-top: 2px;
     }
     .news-text {
-        margin-left: 10px;
+        margin-left: 8px;
+        margin-top: 6px;
     }
     #access {
         padding: 43px 20px 50px;
@@ -757,6 +756,7 @@ input[type="submit"]:hover {
     .access-text-area {
         margin-left: 0;
         white-space: nowrap;
+        width: 100%;
     }
     .post,.address,.tel,.mail,.time,.holiday {
         font-size: 16px;
@@ -766,9 +766,12 @@ input[type="submit"]:hover {
         margin-right: 20px;
         margin-bottom: 30px;
     }
-    }
     .number {
         font-size: 25px;
+    }
+    .hr {
+        width: 100%;
+
     }
     #contact {
         padding: 43px 20px 50px;
@@ -781,22 +784,20 @@ input[type="submit"]:hover {
         text-align: left;
         margin-bottom: 34px;
     }
-    .form__item {
-        display: block;   
+    .form_item {
+        display: block;
     }
-    .form__label {
+    .form_label {
         font-size: 16px;
-        margin-bottom: 2px;
     }
-    .form__input {
-        margin-left: 0;
+    input[type="text"],
+    input[type="email"],
+    textarea {
+        width: 300px;
     }
-    .form__textarea {
+    .contact_button {
         margin-left: 0;
-    }
-    .contact__button {
-        margin-left: 0;
-        width: 335px;
+        width: 100%;
     }
     .footer_copyright {
         font-size: 16px;
