--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,9 @@ p,h1,h2,h3,h4,h5,a {
     margin: 0;
     color: #505050;
 }
-.img {
+.img, iframe {
     max-width: 100%;
-    height: auto;
-    vertical-align: middle;
+    height: auto;  
 }
 a {
     text-decoration: none;
@@ -43,28 +42,28 @@ a {
     left: 0;
     z-index: 999;
 }
-
+.header .container {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 100%;
+}
 .header-icon {
     width: 25.49px; 
     margin-top: 13px;
     margin-bottom: 12px;
     margin-right: 8px;
 }
-.header .container {
-  display: flex;
-  height: 50px;
-  width: 880px;
-}
-.header-title {
+.title {
     font-size: 18px;
     font-weight: 700;
     color: #505050;   
     text-decoration: none;
     transition: all 0.3s ease;
     display: flex;
-    height: 100%;
     align-items: center;
     cursor: pointer; 
+    margin-left: 69px;
 }
 .nav_content {
   margin-left: auto;
@@ -91,8 +90,7 @@ a {
     color: #505050;
     height: 100%;
     font-weight: 700;
-   
- 
+    margin-right: 30px;
 }
 .header_nav li:not(:first-of-type) {
   margin-left: 10px;
@@ -115,17 +113,13 @@ a {
 .main_copy {
     position: absolute;
     top: 152px;
-    margin-left: 100px;
+    margin-left: 30px;
     padding: 23px;
-    width: 100%;
-  
     text-align: left;
 }
 .main_copy p {
     font-size: 25px;
-    margin: 0 0 8px;
     font-weight: 700;
-    margin-left: 79px;
 }
 .main_copy h1 {
     font-size: 40px;
@@ -366,7 +360,7 @@ a {
 }
 #access {
     padding: 63px 100px 70px;
-    width: 100%;
+    max-width: 100%;
 }
 .access-with-images {
     display: flex;
@@ -389,6 +383,7 @@ a {
 }
 .access-flex {
     display: flex;
+    width: 100%;
     max-width: 880px;
     margin: 0 auto;
     
@@ -404,6 +399,7 @@ a {
     top: 0;
     left: 0;
     width: 100%;
+    max-width: 100%;
     height: 300px;
 
 }
@@ -621,11 +617,12 @@ input[type="submit"]:hover {
   #container {
     font-size: 16px;
   }
-  .header-icon {
-    margin-left: 5px;
+  .title {
+    margin-left: -5px;
   }
-  .header-title {
+  .header-title{
     font-size: 20px;
+
   }
   .nav_content {
     display: none;
@@ -665,11 +662,10 @@ input[type="submit"]:hover {
     }
     .massage {
         position: relative;
+        padding: 40px 20px 39px;
     }
     .message h2 {
         font-size: 25px;
-        margin-right: 0;
-        text-align: center;
     }
     .message p {
         margin-right: 20px;
@@ -679,8 +675,8 @@ input[type="submit"]:hover {
     }
     .message img {
         position: absolute;
-        bottom: -330px;
-        right: -40px;
+        bottom: 46px;
+        right: 40px;
         width: 68px;
         height: auto;
     }
@@ -750,7 +746,7 @@ input[type="submit"]:hover {
         display: inline;
     }
     #news {
-        padding: 43px 15px 50px 14px;
+        padding: 43px 20px 50px;
     }   
     .news-item {
         display: block;
@@ -781,6 +777,7 @@ input[type="submit"]:hover {
         width: 100%;
         padding: 0 10px;
         box-sizing: border-box;
+        white-space: normal;
     }
     .post,.address,.tel,.mail,.time,.holiday {
         font-size: 16px;
