--- a/css/style.css
+++ b/css/style.css
@@ -107,46 +107,47 @@ a {
 }
 .main img {
      width: 100%;
-     margin-top: 50px;
+     vertical-align: bottom;
      height: auto;
 }
 .main_copy {
+    background-color: rgba(255,255,255,0.7);
     position: absolute;
-    top: 152px;
-    margin-left: 30px;
-    padding: 23px;
-    text-align: left;
+    top: 50%;
+    left: 0;
+    padding: 23px 35px 23px 99px;
+
 }
 .main_copy p {
     font-size: 25px;
     font-weight: 700;
+    margin-bottom: 8px;
 }
 .main_copy h1 {
     font-size: 40px;
     color: #0D96A0;
-    margin: 0;
-    line-height: normal;
-    padding-left: 79px;
+    line-height: 1.5;
     font-weight: 700;
 }
 .message {
+    width: 100%;
     max-width: 1080px;
     margin: 0 auto;
     position: relative;
+    padding: 50px 0 60px;
 }
 .br-sp {
     display: none;
 }
 .message h2 {
     text-align: center;
-    padding: 53px 60px 15px;
     font-size: 30px;
     font-weight: 700;
     color: #0D96A0;
+    padding-bottom: 15px;
 }
 .message p {
     text-align: center;
-    padding-bottom: 60px;
     font-size: 18px;
     color: #505050; 
     line-height: 33px;
@@ -395,13 +396,9 @@ a {
  
 }
 .access-img-area iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    max-width: 100%;
-    height: 300px;
-
+    height: 100%;
+    aspect-ratio: 440/295;
 }
 .access-text-area {
     display: block;
@@ -609,6 +606,13 @@ input[type="submit"]:hover {
   .pc_none{
     display: none!important;
   }
+  .massage {
+     padding: 50px 60px 60px;
+  }
+  .main_copy {
+    top:50%;
+    transform: translateY(-120%);
+  }
 }
 @media screen and (max-width:768px) {
   .sp_none{
@@ -616,6 +620,7 @@ input[type="submit"]:hover {
   }
   #container {
     font-size: 16px;
+    max-width: 100%;
   }
   .title {
     margin-left: -5px;
@@ -637,21 +642,18 @@ input[type="submit"]:hover {
   }
   .main_copy {
         position: absolute;
-        top: 408px;
-        left: 0;
-        padding: 15px;
-        width: 70%;   
-
+        padding: 18px 23px 14px 20px;
+        bottom: 0; 
+        transform: translateY(21%);
     }
     .main_copy p {
         font-size: 18px;
-        padding-left: 10px;
+        margin-bottom: 7px;
         
     }
     .main_copy h1 {
         font-size: 27px;
-        padding-left: 10px;
-        color: #0D96A0;
+        line-height: 1.34;
     }
     .br-sp {
         display: inline;
@@ -660,22 +662,23 @@ input[type="submit"]:hover {
         content: "\A"; 
         white-space: pre;
     }
-    .massage {
+    .message {
         position: relative;
-        padding: 40px 20px 39px;
+        padding: 30px 0 40px;
+    }
+    .container {
+        padding: 0 20px;
     }
     .message h2 {
         font-size: 25px;
     }
     .message p {
-        margin-right: 20px;
-        margin-left: 20px;
         font-size: 16px;
         text-align: left;
     }
     .message img {
         position: absolute;
-        bottom: 46px;
+        bottom: 50px;
         right: 40px;
         width: 68px;
         height: auto;
@@ -784,14 +787,13 @@ input[type="submit"]:hover {
     }
     .access-img-area {
         width: 100%;
-    max-width: 100%;
-    margin: 0 auto 40px;
+        max-width: 100%;
+        margin: 0 auto 40px;
     }
     .access-img-area iframe {
-        width: 100% !important;
-        height: auto !important;
-        min-height: 322px;
-        display: block;
+        width: 100%;
+        height: 100%;
+        aspect-ratio: 335 / 222;
     }
     .number {
         font-size: 25px;
