--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,8 @@ a {
     font-size: 20px;
     
 }
-.news-text {
+.news-text,
+.news-text2 {
     color: #505050;
     font-weight: 500;
     margin-left: 49px;
@@ -509,13 +510,15 @@ input[type="email"] {
   border-radius: 4px;
   margin-inline: auto;
   margin-bottom: 30px;
+  outline: none;
 }
 textarea {
-    width: 100%;
+  width: 100%;
   max-width: 711px;
   height: 300px;
   resize: none;
   border: none;
+  outline: none;
 
 }
 .contact_button {
@@ -786,24 +789,30 @@ input[type="submit"]:hover {
     .news-item {
         display: block;
         text-align: left;
-        font-size: 16px;
-        padding-top: 25px;
-        padding-bottom: 25px;
-
+        padding: 29px 5px 25px;
     }
     .news-date {
         margin-left: 8px;
+        font-size: 17px;
     }
     .news-title {
         margin-left: 8px;
-        margin-top: 2px;
+        margin-top: 1px;
     }
     .news-text {
         margin-left: 8px;
-        margin-top: 6px;
+        margin-top: 5px;
+        font-size: 16px;
+    }
+    .news-text2 {
+        margin-left: 8px;
+        margin-top: 5px;
+        white-space: nowrap;
+        font-size: 16px;
+
     }
     #access {
-        padding: 43px 20px 50px;
+        padding: 43px 20px 37px;
     }
     .access-flex {
         display: block;
@@ -811,17 +820,14 @@ input[type="submit"]:hover {
     .access-text-area {
         margin-left: 0;
         width: 100%;
-        padding: 0 10px;
         box-sizing: border-box;
         white-space: normal;
     }
-    .post,.address,.tel,.mail,.time,.holiday {
-        font-size: 16px;
-    }
+    
     .access-img-area {
         width: 100%;
         max-width: 100%;
-        margin: 0 auto 40px;
+        margin: 0 auto 25px;
     }
     .access-img-area iframe {
         width: 100%;
@@ -831,47 +837,106 @@ input[type="submit"]:hover {
     .number {
         font-size: 25px;
     }
-    .hr {
-        margin: 10px 0;
-
-    }
     #contact {
-        padding: 43px 20px 50px;
+        padding: 43px 20px 45px;
     }
     .contact-with-images {
-        margin-bottom: 43px;
+        margin-bottom: 42px;
     }
     .section-desc {
         font-size: 16px;
         text-align: left;
-        margin-bottom: 34px;
+        margin-bottom: 32px;
     }
     .form_item {
         display: block;
+        margin-top: -5px;
     }
     .form_label {
-        font-size: 16px;
+        font-size: 18px;
     }
-    input[type="text"],
-    input[type="email"],
+    input[type="text"]{
+        width: 100%;
+        height: 50px;
+        margin-top: 5px;
+    }
+    input[type="email"]{
+        width: 100%;
+        height: 50px;
+        margin-top: 5px;
+    }
     textarea {
-        width: 335px;
+        width: 100%;
+        margin-top: 5px;
     }
     .contact_button {
-        margin-left: 0;
         width: 100%;
+    }
+    .contact_button input[type="submit"] {
+        padding: 1px 0;
+        font-size: 20px;
+        height: 41px;
+    } 
+    .footer {
+        padding: 30px 20px 50px;
     }
     .footer_copyright {
         font-size: 16px;
-    }
-    .footer {
-        padding: 45px 20px 50px;
+        margin-top: 20px;
     }
     .footer-nav_lists {
         flex-wrap: wrap; /* 折り返しOKにする */
         justify-content: center; /* 中央揃え */
         row-gap: 10px; /* 縦の余白 */
-        padding: 16px 10px; /* スマホ時は左右パディング狭く */
-
+        padding: 16px 13px; /* スマホ時は左右パディング狭く */
     }
+    .footer-nav_list a {
+        font-size: 18px;
+        margin-bottom: 3px;
+    }
+    .footer_sns {
+        margin-top: 40px;
+    }
+}
+.access-text-area {
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.access-text-area p {
+  font-size: 16px;
+  line-height: 1.6;
+  margin: 5px 0 8px 0;
+  letter-spacing: 0;
+}
+.access-text-area .address,
+.access-text-area .post {
+    font-size: 16px;
+}
+.access-text-area .number {
+  font-size: 25px;
+  line-height: 1.6;
+}
+
+.access-text-area hr {
+  margin: 12px 0;
+  border: none;
+  border-top: 1px solid #ccc;
+}
+
+.access-text-area h5.clinic-name {
+  font-size: 22px;
+  margin: 0 0 13px 0;
+}
+
+.access-with-images img {
+  width: 24px;
+  height: 24px;
+  vertical-align: middle;
+}
+
+.access-with-images h3 {
+  font-size: 24px;
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: middle;
 }
